--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,8 +229,8 @@ nav.navbar.bootsnav .navbar-toggle i{color: #f92c2c;}
     border-radius: 3px;
     text-transform: capitalize;
     color: #fff;
-    background: #b636ff;
-    border:1px solid #b636ff;
+    background: #f92c2c;
+    border:1px solid #f92c2c;
     box-shadow: 0 5px 20px rgba(0,0,0,.2);
     -webkit-transition: 0.3s linear; 
     -moz-transition: 0.3s linear; 
@@ -406,7 +406,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     margin-bottom: 37px;
 }
 .progress-bar {
-   background: #b636ff;
+   background: #f92c2c;
     border-radius: 3px;
    -webkit-transition: width 1.5s ease-in-out;
    -ms-transition: width 1.5s ease-in-out;
@@ -421,7 +421,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 .tooltip > .tooltip-inner {
    background-color: transparent;
    padding: 1px 5px;
-   color: #b636ff;
+   color: #f92c2c;
    font-weight: 500;
    font-size: 12px;
    border-radius: 0;
@@ -566,10 +566,10 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     width:100%;
     height: 100%;
     background: #f92c2c;
-    background: -moz-linear-gradient(left, #f92c2c 0%, #b636ff 100%);
-    background: -webkit-linear-gradient(left, #f92c2c 0%,#b636ff 100%);
-    background: linear-gradient(to right, #f92c2c 0%,#b636ff 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f92c2c', endColorstr='#b636ff',GradientType=1 );
+    background: -moz-linear-gradient(left, #f92c2c 0%, #f92c2c 100%);
+    background: -webkit-linear-gradient(left, #f92c2c 0%,#f92c2c 100%);
+    background: linear-gradient(to right, #f92c2c 0%,#f92c2c 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f92c2c', endColorstr='#f92c2c',GradientType=1 );
     -webkit-transform:scale(0);
     -moz-transform:scale(0);
     -ms-transform:scale(0);
@@ -717,8 +717,8 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     height:50px;
     text-transform:capitalize;
     margin-top: 3px;
-    background: #b636ff;
-    border: 1px solid #b636ff;
+    background: #f92c2c;
+    border: 1px solid #f92c2c;
     cursor:pointer;
     box-shadow: 0 5px 20px rgba(0,0,0,.2);
      -webkit-transition: .5s; 
@@ -795,7 +795,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     transition: .3s;
 }
 .hm-foot-icon ul li>a:hover{
-    color: #b636ff;
+    color: #f92c2c;
 }/*hm-foot-icon*/
 
 .hm-footer-copyright p{
@@ -819,8 +819,8 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     font-size: 20px;
     cursor: pointer;
     color: #fff;
-    background:#b636ff;
-	border:1px solid #b636ff;
+    background:#f92c2c;
+	border:1px solid #f92c2c;
 	border-radius:50%;
 	-webkit-transition: .5s; 
 	-moz-transition:.5s; 
@@ -831,8 +831,8 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 #scroll-Top  .return-to-top:hover {
     background:#fff;
-    color: #b636ff;
-	border:1px solid #b636ff;
+    color: #f92c2c;
+	border:1px solid #f92c2c;
 }
 
 #scroll-Top  .return-to-top i{
