--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,7 +386,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 .single-progress-txt h3 {
     width: 10%;
-    color: #a606c3;
+    color: #f92c2c;
     position: relative;
     top: 6px;
     left: 20px;
