--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ font-family: 'Poppins', sans-serif;
 body{
 	font-family: 'Poppins', sans-serif;
 	font-size:16px;
-	color: #edeef5;
+	color: #676a81;
 	background: #fff;
     max-width:1920px;
     margin:0 auto;
