--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,6 +490,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     font-size: 16px;
     font-weight: 400;
     text-transform: uppercase;
+    padding-bottom: 8px;
 }
 .timeline-content h5 {
     color: #636a82;
