--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -781,6 +781,28 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 /*.contact-add-info */
 
+.contact-info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+        }
+.contact-info a {
+    text-decoration: none;
+    color: #007bff;
+    font-size: 18px;
+}
+.contact-info a:hover {
+    color: #0056b3;
+}
+.icon {
+    margin-right: 8px;
+}
+.contact p {
+    font-size: 20px;
+    color: #444;
+}
+
 /*hm-foot-icon*/
 .hm-foot-icon {
    
