--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -518,6 +518,122 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     border-left:15px solid #fff;
 }
 
+
+/* task timeline */
+.main-timeline-task{
+    position: relative;
+}
+.main-timeline-task:before{
+    content: "";
+    width: 2px;
+    height: 79%;
+    background: #b2c1ce;
+    position: absolute;
+    top: 0.2%;
+    left: 45.87%;
+    z-index: -1;
+}
+.main-timeline-task .timeline{
+    position: relative;
+}
+
+.timeline-content span>i, .experience-time span>i {
+    color: #f92c2c;
+    position: absolute;
+    font-size: 10px;
+    left: -14.5%;
+    z-index: 1;
+}
+.timeline-content h4.title {
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+}
+.timeline-content h5 {
+    color: #636a82;
+    font-size: 14px;
+    font-weight: 300;
+    margin: 18px 0 20px;
+}
+.main-timeline-task .description {
+    font-size: 14px;
+    color: #999fb3;
+    text-align: justify;
+}
+.main-timeline-task .timeline-content.right{
+    float: right;
+    text-align: left;
+}
+.timeline-single-before:before {
+    content: '';
+    top: 57px;
+    left: -3px;
+    position: absolute;
+    width: 100%;
+    height:400px;
+    border-left:15px solid #fff;
+}
+
+
+
+
+/* study timeline */
+.main-timeline-study{
+    position: relative;
+}
+.main-timeline-study:before{
+    content: "";
+    width: 2px;
+    height: 88%;
+    background: #b2c1ce;
+    position: absolute;
+    top: 0.2%;
+    left: 45.87%;
+    z-index: -1;
+}
+.main-timeline-study .timeline{
+    position: relative;
+}
+
+.timeline-content span>i, .experience-time span>i {
+    color: #f92c2c;
+    position: absolute;
+    font-size: 10px;
+    left: -14.5%;
+    z-index: 1;
+}
+.timeline-content h4.title {
+    font-size: 16px;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+}
+.timeline-content h5 {
+    color: #636a82;
+    font-size: 14px;
+    font-weight: 300;
+    margin: 18px 0 20px;
+}
+.main-timeline-study .description {
+    font-size: 14px;
+    color: #999fb3;
+    text-align: justify;
+}
+.main-timeline-study .timeline-content.right{
+    float: right;
+    text-align: left;
+}
+.timeline-single-before:before {
+    content: '';
+    top: 57px;
+    left: -3px;
+    position: absolute;
+    width: 100%;
+    height:400px;
+    border-left:15px solid #fff;
+}
+
 .experience-time-responsive{display: none;}
 /*-------------------------------------
         8. Profiles
