--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,7 +190,7 @@ nav.navbar.bootsnav .navbar-toggle i{color: #f92c2c;}
     align-items: center;
     justify-content: center;
     position:relative;
-    background:url(../images/about/IMG_7698.png)no-repeat;
+    background:url(../images/about/IMG_7698.jpg)no-repeat;
     background-size:cover;
     background-position: center;
     height:850px;
